# intesim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/: intesim.py
src/intesim/: __init__.py  intesim.py
tests/: test_intesim.py
