[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intesim"
version = "0.1.1"
description = "Spanish ordinal number generator"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "rimopa", email = "rimopapomir@gmail.com" }]
keywords = ["spanish", "ordinal", "numbers", "linguistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Spanish",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rimopa/intesim"
Issues = "https://github.com/rimopa/intesim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/intesim"]
